--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,26 @@
-
-# numerical / symbolic computation
-numpy
+# numeric manipulations
+numpy=2.0.2
+pandas=2.2.3
 # visualization
-matplotlib
-open3d
-opencv-python
+matplotlib=3.10.0
+open3d=0.19.0
+opencv-python=4.11.0.86
 # geometric
-shapely
-# auxiliary
-tqdm
+shapely=2.0.6
+
 # machine learning
-scikit-learn    # check    
-tensorflow
-tensorboard
-torch
-torch_geometric # for conda pyg
-tf_slim         # (import tf_slim as slim) instead of (import tensorflow.contrib.slim as slim)
+scikit-learn=1.6.1
+tensorflow=2.18.0
+tensorboard=2.18.0
+torch=2.4.1
+torch_geometric=2.6.1
+torch_vision=0.19.1
+# for broke people gpu support
+torch_directml=0.2.5.dev240914
 # for gpu support on nvidia devices
 cudatoolkit=11.2 
 cudnn=8.1
+# auxiliary
+tqdm=4.67.1
+tf_slim=1.1.0         # (import tf_slim as slim) instead of (import tensorflow.contrib.slim as slim)
+
